test/corpus/basic.txt
================================================================================
Comments
================================================================================

' This is a comment
' Another comment

--------------------------------------------------------------------------------

(source_file
  (comment)
  (comment))

================================================================================
Variable Declaration
================================================================================

Dim MyVariable As Float
Public SensorData As Long

--------------------------------------------------------------------------------

(source_file
  (variable_declaration
    (identifier)
    (type))
  (variable_declaration
    (identifier)
    (type)))

================================================================================
Simple Assignment
================================================================================

MyVariable = 42.5

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (number)))

================================================================================
Function Call
================================================================================

VoltSE(Battery, 1, 2, 3)

--------------------------------------------------------------------------------

(source_file
  (function_call
    (identifier)
    (argument_list
      (identifier)
      (number)
      (number)
      (number))))

================================================================================
If Statement
================================================================================

If MyVariable > 10 Then
  MyVariable = 5
EndIf

--------------------------------------------------------------------------------

(source_file
  (control_structure
    (if_statement
      (binary_expression
        (identifier)
        (number))
      (assignment
        (identifier)
        (number)))))

================================================================================
For Loop
================================================================================

For I = 1 To 10 Step 2
  Result = I * 2
Next I

--------------------------------------------------------------------------------

(source_file
  (control_structure
    (for_loop
      variable: (identifier)
      start: (number)
      end: (number)
      step: (number)
      (assignment
        (identifier)
        (binary_expression
          (identifier)
          (number)))
      variable_end: (identifier))))

================================================================================
Scan Structure
================================================================================

Scan(1, Sec, 3, 0)
  VoltSE(BattV, 1, mV2500, 1, 0, 0, 250, 1.0, 0)
NextScan

--------------------------------------------------------------------------------

(source_file
  (scan_structure
    (number)
    (identifier)
    (number)
    (number)
    (function_call
      (identifier)
      (argument_list
        (identifier)
        (number)
        (identifier)
        (number)
        (number)
        (number)
        (number)
        (number)
        (number)))))

================================================================================
Boolean Values
================================================================================

Dim Flag As Boolean
Flag = True

--------------------------------------------------------------------------------

(source_file
  (variable_declaration
    (identifier)
    (type))
  (assignment
    (identifier)
    (boolean)))

================================================================================
Hexadecimal Numbers
================================================================================

MyHex = &H1A2B

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (number)))

================================================================================
Program Structure
================================================================================

BeginProg
  Dim Temperature As Float
  Temperature = 25.0
EndProg

--------------------------------------------------------------------------------

(source_file
  (program_structure
    (variable_declaration
      (identifier)
      (type))
    (assignment
      (identifier)
      (number))))